// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";

option go_package = "storj.io/common/pb";

package encryption_access;

import "encryption.proto";

message EncryptionAccess {
    message StoreEntry {
        bytes bucket = 1;
        bytes unencrypted_path = 2;
        bytes encrypted_path = 3;
        bytes key = 4;

        encryption.CipherSuite path_cipher = 5;
        encryption.CipherSuite metadata_cipher = 7;
        encryption.EncryptionParameters encryption_parameters = 6;
    }

    bytes default_key = 1;
    repeated StoreEntry store_entries = 2;
    encryption.CipherSuite default_path_cipher = 3;
    encryption.CipherSuite default_metadata_cipher = 5;
    encryption.EncryptionParameters default_encryption_parameters = 4;
}
